--- a/contactsproject/app/src/main/res/layout/main_fragment.xml
+++ b/contactsproject/app/src/main/res/layout/main_fragment.xml
@@ -15,7 +15,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
             <TextView
@@ -30,8 +30,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:importantForAutofill="no"
                 android:inputType="none"
-                android:textSize="18sp" />
+                android:labelFor="@id/contact_name"
+                android:textSize="18sp"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
         </TableRow>
 
         <TableRow
@@ -51,8 +54,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:importantForAutofill="no"
+                android:inputType="phone"
+                android:textSize="18sp"
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
         </TableRow>
 
     </TableLayout>
